--- a/zookeeper-server/pom.xml
+++ b/zookeeper-server/pom.xml
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.apache.yetus</groupId>
@@ -87,7 +87,7 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -122,7 +122,7 @@
     <dependency>
        <groupId>io.dropwizard.metrics</groupId>
        <artifactId>metrics-core</artifactId>
-       <scope>provided</scope>
+<!--       <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -156,7 +156,7 @@
     <dependency>
       <groupId>org.xerial.snappy</groupId>
       <artifactId>snappy-java</artifactId>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
   </dependencies>
 
