--- a/conf/zoo-3.cfg
+++ b/conf/zoo-3.cfg
@@ -9,7 +9,7 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
-dataDir=data-3
+dataDir=data/data-3
 # the port at which the clients will connect
 clientPort=2183
 # the maximum number of client connections.
